Finished PWP Milestone One

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -2,9 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Milestone-1</title>
 </head>
 <body>
+<h1>Milestone-1</h1>
 
+<h2>Objectives of Project</h2>
+<a href="http://ddc-web-curriculum.cnm.edu/pwp-milestone-one/">Link to Instructions</a>
+<main>
+        <section>
+            <h3>Purpose, Audience, and Goal</h3>
+            <p><em>Purpose:</em>The purpose of my PWP will be to help me get some freelance work. My plan is to start my career, as a Web Developer, doing freelance work. This website I create will be a way for people to find me and hire me as their Web developer.</p>
+            <p><em>Audience:</em>My audience is going to be narrow in scope. This is intended to give me the best shot at appealing to them in particular. This audience is going to be professional YouTuber's in the market for a certified Web Developer. To make it even more narrower I plan to target particularly gamers and vloggers who want a website to sell their merch. I've chosen this audience because I have personal experience with people who do this work. Lastly there appears to be opportunities with this audience as it is clear that the online entertainment industry is exponentially growing.</p>
+            <p><em>Goal:</em>My goal with the PWP is to create a site that will put me in the position to get freelance work after graduation. This site will be used as a place for Youtubers to check out if I am the right person to create their websites. When my website is completed it will be the place where my potential customers are directed for more information. This is essential because I plan to advertise myself when I am ready for the job. This website will be the key to finding some of my first freelancing work.</p>
+        </section>
+
+    <h3>Persona</h3>
+        <section>
+            <h4>Lorenzo "LemonBeanz"</h4>
+            <h4>Profession</h4>
+                <p>Professional YouTuber</p>
+            <h4>Technology</h4>
+                <ul>
+                    <li>Device: HP Omen-65" LED 4k Monitor & LG-27" IPS Gaming Monitor; Alienware 17.3" Gaming Laptop with Intel core i7 for recording and Asus Gaming Desktop i7 NVIDIA GeForce RTX 2080 Super; X-Box One X; Playstation 5; Nintendo Switch; Oculus Rift with Oculus Browser; Apple IPhone 12 with unlimited 5g</li>
+<!--TODO Research the Oculus Rift Browser https://www.oculus.com/experiences/gear-vr/1257988667656584/?locale=en_US -->
+                    <li>Proficiency: Extremely talented and knowledge with many different technologies, programs, and video games such as YouTube, Twitch, Adobe editor, and MineCraft</li>
+                    <li>Passion for Tech: Loves his technology</li>
+                </ul>
+            <h4>Attitudes and Needs</h4>
+                <p>He wants a website to sell their merch. They want a donate button for their 24hr streaming charities. Needs a straightforward price. Wants to know how a Web Developer can help them accomplish their goals. Wants the technical nitty gritty information about how and when their website can be created. Needs a down to earth partner to help achieve their next professional set. Wants a personal understanding of who is creating this website. Wants their website to look cool on the Oculus Browser.</p>
+            <h4>Frustrations</h4>
+            <uL>
+                <li>Bugs</li>
+                <li>Not getting order right or not getting at all</li>
+                <li>Confusing site navigation</li>
+                <li>Not enough information about pricing</li>
+                <li>Not enough example websites</li>
+                <li>Lack of contact information</li>
+                <li>No customer reviews</li>
+                <li>No create account button</li>
+                <li>No way to pay for the service</li>
+                <li>Needs to look more professional for their taste</li>
+                <li>Annoyed that it is not a https website</li>
+            </uL>
+            <h4>Role</h4>
+                <p>Power User who visit's site often for updated information.</p>
+            <h4>Goal</h4>
+                <p>Their goal is to hire a Web Developer that can help them design a website to sell one million merch items.</p>
+            <h4>User Story</h4>
+                <p>As a power user, I am going to determine if Brody's Web-Development service will help me achieve my goal.</p>
+        </section>
+</main>
 </body>
 </html>
