Changed Youtuber name, added detailed technology.

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -19,13 +19,14 @@
 
     <h3>Persona</h3>
         <section>
-            <h4>Lorenzo "LemonBeanz"</h4>
+            <h4>Lorenzo "LemonZ5o5"</h4>
             <h4>Profession</h4>
                 <p>Professional YouTuber</p>
             <h4>Technology</h4>
                 <ul>
                     <li>Device: HP Omen-65" LED 4k Monitor & LG-27" IPS Gaming Monitor; Alienware 17.3" Gaming Laptop with Intel core i7 for recording and Asus Gaming Desktop i7 NVIDIA GeForce RTX 2080 Super; X-Box One X; Playstation 5; Nintendo Switch; Oculus Rift with Oculus Browser; Apple IPhone 12 with unlimited 5g</li>
-<!--TODO Research the Oculus Rift Browser https://www.oculus.com/experiences/gear-vr/1257988667656584/?locale=en_US -->
+<!--TODO Research the Oculus Rift Browser https://www.oculus.com/experiences/gear-vr/1257988667656584/?locale=en_US
+https://developer.oculus.com/documentation/oculus-browser/browser-release-notes/ -->
                     <li>Proficiency: Extremely talented and knowledge with many different technologies, programs, and video games such as YouTube, Twitch, Adobe editor, and MineCraft</li>
                     <li>Passion for Tech: Loves his technology</li>
                 </ul>
