added content strategy to milestone-2

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+	<meta charset="UTF-8">
+	<title>Milestone-2</title>
 </head>
 <body>
-$END$
+<!--TODO pick a color scheme, fonts and a Z or F Layout-->
+<!--TODO Three colors Primary, Secondary and highlight; Text Color- THICK BOLD WHITE TEXT SHORT PHRASES-->
+<!--TODO Convey Trust to clients... Have I done this?? Idea: offer availability to talk...People want to know "can I call when something is wrong?"-->
+<!--TODO Design a Logo-->
+<!--Todo do I have most of the 10 principles of good design-->
+<!--TODO You’ll create a set of digital wireframes using a tool or method of your choice. A minimum of one wireframe for mobile and one wireframe for desktop/laptop are required.-->
+<!--TODO If I add a GIF make sure it is good and done right. Use heavy transparency and optimize the image for performance-->
+
+<main>
+	<h1>PWP Milestone 2</h1>
+
+	<h2>Content Strategy Content of Each Section</h2>
+	<!--For Example see http://ddc-web-curriculum.cnm.edu/pwp-example/ -->
+	<!--Lecture notes on good web design http://ddc-web-curriculum.cnm.edu/introduction-to-web-design/-->
+	<h3>NavBar</h3>
+	<p>The NavBar will have a business logo on the left and on the right links to other parts of the page. It will also have a highlighted contact me button.</p>
+	<h3>Skill GIF or Image</h3>
+	<p>This will be a GIF or an image in the background of the first section of my Webpage. It will be either a single image of code or it will be GIF of code with a website being snapped into existence. Depending on how the GIF comes out will determine which I will choose.</p>
+	<h3>My Value/About Me</h3>
+	<p>This section is going to sell my service as reliable and affordable. I want the client to understand that they can trust me with their web development needs. To do this I am going to cite my ability to code websites from the ground up and ability to do unique design work. Lastly I want the customer to feel like after reading this section that they will have a personal relationship with me while their website is being built. I'm going to do this by offering one-on-one service times for me and the client to get together digitally to discuss exactly it is that they might want on their website. In general I want the customer to feel like I can further their goals with my service.</p>
+	<!--<ul>
+		<li>Content creator myself.</li>
+		<li>affordable and capable. I will design a good website at a good price.</li>
+		<li>Certified programmer that uses code languages such as HTML, CSS and JavaScript to develop your website from
+			the ground-up.
+		</li>
+		<li>Experience with many programs that content creators use such as Adobe Premier Pro and Photoshop.</li>
+		<li>It's Personal...You want someone to talk to over the phone about what you want. I offer opportunities to work
+			with my clients one-on-one to provide what they want.
+		</li>
+	</ul>-->
+	<h3>Side bar</h3>
+	<p>I want to create a sidebar with a couple options. This sidebar will be sticky and stay on the screen as the user scrolls down the page. It will have a button that easily gets the customer to take the next steps on contacting me or learning more about me. It will have a phone icon, GitHub icon and more. Wont have in mobile view. </p>
+	<h3>Web Development Services</h3>
+	<p>Here I am going to have three web development services that I will provide. The first is going to be a basic website package. It is going to list the number of pages I will create and the ability for the site to be responsive to mobile devices. The second will be to develop a WordPress website. Here I will provide the option for a customer to see some of the features they will get with a basic WordPress website. In addition, will be an optional service for me to maintain their WordPress website. The last service will be a custom contract that me and the client will create together. Some benefits here will be the ability to create a more complex website or WordPress website with an online shop. Overall this section will provide customers an opportunity to get an idea of what services I provide.</p>
+	<!--<ul>
+		<li>responsive mobile websites</li>
+		<li>Payment/product Information...I offer the best price for service needed. What my product is and looks
+			like.
+		</li>
+		<li>Showcase of features I can build</li>
+		<li>WordPress</li>
+		<li>Custom Service</li>
+	</ul> -->
+	<h3>Client Reviews</h3>
+	<p>This section will be laid out for the future after I get a few clients to leave their reviews for my service provided. These reviews will be handpicked and added by me. I hope to have at least two reviews and a third panel that allows a client to leave a review.</p>
+	<h3>Contact Form and contact Info-phone number -email -github </h3>
+
+	<h2>Wire Frames</h2>
+	<!--	with img tags-->
+	<!--	I want a sticky side bar that has a phone and email icon that drags with the page-->
+</main>
+
 </body>
 </html>
