--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -15,6 +15,8 @@
 
 <main>
 	<h1>PWP Milestone 2</h1>
+	<h2>Website Name and Slogan</h2>
+	<p>Business name; Web Development for Content Creators</p>
 
 	<h2>Content Strategy Content of Each Section</h2>
 	<!--For Example see http://ddc-web-curriculum.cnm.edu/pwp-example/ -->
@@ -37,7 +39,7 @@
 		</li>
 	</ul>-->
 	<h3>Side bar</h3>
-	<p>I want to create a sidebar with a couple options. This sidebar will be sticky and stay on the screen as the user scrolls down the page. It will have a button that easily gets the customer to take the next steps on contacting me or learning more about me. It will have a phone icon, GitHub icon and more. Wont have in mobile view. </p>
+	<p>I want to create a sidebar with a couple options. This sidebar will be sticky and stay on the screen as the user scrolls down the page. It will have a button that easily gets the customer to take the next steps on contacting me or learning more about me. It will have a phone icon, GitHub icon, link to my personal portfolio, linkedIn and more. In mobile view it will be static next to about me.</p>
 	<h3>Web Development Services</h3>
 	<p>Here I am going to have three web development services that I will provide. The first is going to be a basic website package. It is going to list the number of pages I will create and the ability for the site to be responsive to mobile devices. The second will be to develop a WordPress website. Here I will provide the option for a customer to see some of the features they will get with a basic WordPress website. In addition, will be an optional service for me to maintain their WordPress website. The last service will be a custom contract that me and the client will create together. Some benefits here will be the ability to create a more complex website or WordPress website with an online shop. Overall this section will provide customers an opportunity to get an idea of what services I provide.</p>
 	<!--<ul>
@@ -52,8 +54,13 @@
 	<h3>Client Reviews</h3>
 	<p>This section will be laid out for the future after I get a few clients to leave their reviews for my service provided. These reviews will be handpicked and added by me. I hope to have at least two reviews and a third panel that allows a client to leave a review.</p>
 	<h3>Contact Form and contact Info-phone number -email -github </h3>
+	<p>This section will be the basic contact form</p>
+
+	<h3>Footer</h3>
+	<p>The footer will have all the neccessary things that a business will have. Things such as a privacy policy, contact me, page navigation, and more.</p>
 
 	<h2>Wire Frames</h2>
+	<p>This page will be responsive to both small and medium sized devices. It will also include ARIA attributes in the correct structuring tags.</p>
 	<!--	with img tags-->
 	<!--	I want a sticky side bar that has a phone and email icon that drags with the page-->
 </main>
