--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -13,6 +13,8 @@
 <!--TODO You’ll create a set of digital wireframes using a tool or method of your choice. A minimum of one wireframe for mobile and one wireframe for desktop/laptop are required.-->
 <!--TODO If I add a GIF make sure it is good and done right. Use heavy transparency and optimize the image for performance-->
 
+<!--Overview of My PWP: I want my PWP to be a freelancing business that will attract content creators. I will not actually be creating a business because that is outside the scope of this class. But rather this will be a webpage for a potential future business. My hope is that this website gives me a place to start a few freelancing projects. -->
+
 <main>
 	<h1>PWP Milestone 2</h1>
 	<h2>Website Name and Slogan</h2>
