--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -62,10 +62,8 @@
 	<p>The footer will have all the neccessary things that a business will have. Things such as a privacy policy, contact me, page navigation, and more.</p>
 
 	<h2>Wire Frames</h2>
-	<p>This page will be responsive to both small and medium sized devices. It will also include ARIA attributes in the correct structuring tags.</p>
-	<!--	with img tags-->
-	<!--	I want a sticky side bar that has a phone and email icon that drags with the page-->
+	<img src="img/desktop-wire.JPG" alt="desktop">
+	<img src="img/phone-wire.jpg" alt="phone">
 </main>
-
 </body>
 </html>
