changed side-bar description to function with Parallax instead of sticky

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -42,7 +42,7 @@
 		</li>
 	</ul>-->
 	<h3>Side bar</h3>
-	<p>I want to create a sidebar with a couple options. This sidebar will be sticky and stay on the screen as the user scrolls down the page. It will have a button that easily gets the customer to take the next steps on contacting me or learning more about me. It will have a phone icon, GitHub icon, link to my personal portfolio, linkedIn and more. In mobile view it will be static next to about me.</p>
+	<p>I want to create a sidebar with a couple options. This sidebar will designed using Parallax. It will stay on the screen as the user scrolls down the page. It will have a button that easily gets the customer to take the next steps on contacting me or learning more about me. It will have a phone icon, GitHub icon, link to my personal portfolio, linkedIn and more. In mobile view it will be static next to about me.</p>
 	<h3>Web Development Services</h3>
 	<p>Here I am going to have three web development services that I will provide. The first is going to be a basic website package. It is going to list the number of pages I will create and the ability for the site to be responsive to mobile devices. The second will be to develop a WordPress website. Here I will provide the option for a customer to see some of the features they will get with a basic WordPress website. In addition, will be an optional service for me to maintain their WordPress website. The last service will be a custom contract that me and the client will create together. Some benefits here will be the ability to create a more complex website or WordPress website with an online shop. Overall this section will provide customers an opportunity to get an idea of what services I provide.</p>
 	<!--<ul>
