--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,8 +11,44 @@
 	<title>Personal Website Project</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<header>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">
+				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+				Website Name</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">About Me</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Service Plans</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Client Reviews</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact Me</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
 
+
+<main>
+
+</main>
+
+
+<footer>
+
+</footer>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
