--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,18 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
 	<title>Personal Website Project</title>
 </head>
 <body>
 <header>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-md navbar-light bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
-				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"
+					 class="d-inline-block align-text-top">
 				Website Name</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -42,15 +46,122 @@
 
 
 <main>
+	<section class="container-fluid px-0">
+		<div class="row">
+			<div><img src="imgs/pwp-background-placeholder.png" class="img-fluid px-0" alt="Galaxy"></div>
+		</div>
+	</section>
 
+	<section class="container py-4">
+		<div class="row">
+			<div class="col-md-8 px-5">
+				<h1>About Me</h1>
+				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
+					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
+					nullam curabitur parturient sem.</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="container d-flex justify-content-center">
+		<div class="row">
+			<div class="col-md-3 px-5">
+				<h2 class="text-center">Services</h2>
+			</div>
+		</div>
+	</section>
+
+	<section class="container">
+		<div class="row">
+			<div class="col-md-4 px-5">
+				<h3 class="text-center">Service 1</h3>
+				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
+					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
+					nullam curabitur parturient sem.
+					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
+					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
+					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
+					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
+					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+			</div>
+			<div class="col-md-4 px-5">
+				<h3 class="text-center">Service 2</h3>
+				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
+					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
+					nullam curabitur parturient sem.
+					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
+					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
+					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
+					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
+					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+			</div>
+			<div class="col-md-4 px-5">
+				<h3 class="text-center">Service 3</h3>
+				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
+					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
+					nullam curabitur parturient sem.
+					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
+					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
+					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
+					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
+					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="container d-flex justify-content-center">
+		<div class="row">
+			<div class="col-md-3 px-5">
+				<h2 class="text-center">Reviews</h2>
+			</div>
+		</div>
+	</section>
+
+	<section class="container">
+		<div class="row">
+			<div class="col-md-6 px-5">
+				<h3 class="text-center">Review 1</h3>
+				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
+					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
+					nullam curabitur parturient sem.
+					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
+					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
+					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
+					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
+					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+			</div>
+			<div class="col-md-6 px-5">
+				<h3 class="text-center">Review 2</h3>
+				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
+					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
+					nullam curabitur parturient sem.
+					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
+					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
+					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
+					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
+					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+			</div>
+		</div>
+	</section>
 </main>
 
 
 <footer>
-
+	<section class="container">
+		<div class="mb-3">
+			<label for="exampleFormControlInput1" class="form-label">Email address</label>
+			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+		</div>
+		<div class="mb-3">
+			<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+		</div>
+	</section>
 </footer>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+		crossorigin="anonymous"></script>
 </body>
 </html>
