Replaced lorem Ipsum, added a tentative name for the website

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,7 +18,7 @@
 			<a class="navbar-brand" href="#">
 				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"
 					 class="d-inline-block align-text-top">
-				Website Name</a>
+				Super Saiyan Website Development</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -55,10 +55,9 @@
 	<section class="container py-4">
 		<div class="row">
 			<div class="col-md-8 px-5">
-				<h1>About Me</h1>
-				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
-					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
-					nullam curabitur parturient sem.</p>
+<!--				Add highlighted style to key words-->
+				<h1>About Super Saiyan Web Development</h1>
+				<p>Welcome to the most affordable and reliable service for all of your Web Development needs. We can build your own personal website from the ground up. Your new website will look and work how you want it to. This is done by having one on one meetings to ensure the design and functionality is what you want. You are here because you want to take your online presence to the next level and further achieve your goals. You can trust that we can make your new website a reality!</p>
 			</div>
 		</div>
 	</section>
@@ -74,37 +73,30 @@
 	<section class="container">
 		<div class="row">
 			<div class="col-md-4 px-5">
-				<h3 class="text-center">Service 1</h3>
-				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
-					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
-					nullam curabitur parturient sem.
-					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
-					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
-					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
-					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
-					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+				<h3 class="text-center">Personal Web Portfolio</h3>
+				<ul>
+					<li>A Website for people to learn more about you</li>
+					<li>Single Page</li>
+					<li>Responsive to look professional on Mobile and Desktop</li>
+				</ul>
 			</div>
 			<div class="col-md-4 px-5">
-				<h3 class="text-center">Service 2</h3>
-				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
-					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
-					nullam curabitur parturient sem.
-					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
-					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
-					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
-					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
-					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+				<h3 class="text-center">E-Commerce Online Web Shop </h3>
+				<ul>
+					<li>A Website for you to sell your products</li>
+					<li>Online Shop</li>
+					<li>Created with Wordpress</li>
+					<li>Products, Add to Cart, Checkout </li>
+					<li>Optional Service: Continued wordpress Maintenance </li>
+				</ul>
 			</div>
 			<div class="col-md-4 px-5">
-				<h3 class="text-center">Service 3</h3>
-				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
-					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
-					nullam curabitur parturient sem.
-					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
-					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
-					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
-					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
-					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+				<h3 class="text-center">Unique/Creative Website</h3>
+				<ul>
+					<li>Thinking outside the Box</li>
+					<li>Custom design created by you and me</li>
+					<li>Complex web development that is cutting edge</li>
+				</ul>
 			</div>
 		</div>
 	</section>
