added some bg color to containers

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 <header>
-	<nav class="navbar navbar-expand-md navbar-light bg-light">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"
 					 class="d-inline-block align-text-top">
-				Super Saiyan Website Development</a>
+				Super Saiyan Website Development<br>Personal Web Development Services</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -52,12 +52,12 @@
 		</div>
 	</section>
 
-	<section class="container py-4">
+	<section class="container-fluid py-4 bg-dark text-white">
 		<div class="row">
 			<div class="col-md-8 px-5">
 <!--				Add highlighted style to key words-->
 				<h1>About Super Saiyan Web Development</h1>
-				<p>Welcome to the most affordable and reliable service for all of your Web Development needs. We can build your own personal website from the ground up. Your new website will look and work how you want it to. This is done by having one on one meetings to ensure the design and functionality is what you want. You are here because you want to take your online presence to the next level and further achieve your goals. You can trust that we can make your new website a reality!</p>
+				<p>Welcome to the most affordable and reliable service for all of your Web Development needs. We can build your own personal website from the ground up. Your new website will look and work how you want it to. This is done by having one-on-one meetings to ensure the design and functionality is what you want. You are here because you want to take your online presence to the next level and further achieve your goals. You can trust that we can make your new website a reality!</p>
 			</div>
 		</div>
 	</section>
@@ -101,7 +101,7 @@
 		</div>
 	</section>
 
-	<section class="container d-flex justify-content-center">
+	<section class="container-fluid d-flex justify-content-center bg-dark text-white">
 		<div class="row">
 			<div class="col-md-3 px-5">
 				<h2 class="text-center">Reviews</h2>
@@ -109,29 +109,25 @@
 		</div>
 	</section>
 
-	<section class="container">
+	<section class="container-fluid bg-dark text-white">
 		<div class="row">
-			<div class="col-md-6 px-5">
+			<div class="col-md-4 px-5">
 				<h3 class="text-center">Review 1</h3>
-				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
-					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
-					nullam curabitur parturient sem.
-					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
-					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
-					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
-					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
-					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+				<p>"Success usually comes to those who are too busy to be looking for it."
+
+					-- Henry David Thoreau</p>
 			</div>
-			<div class="col-md-6 px-5">
+			<div class="col-md-4 px-5">
 				<h3 class="text-center">Review 2</h3>
-				<p>Lorem ipsum dolor sit amet sed veni donec. Aliquet sit eget dis adipiscing nam neque eu maecenas
-					ultricies quis. Viverra rutrum nulla montes dui sit. Amet vitae tincidunt mus enim semper a tellus
-					nullam curabitur parturient sem.
-					Eget metus vel curabitur eu hendrerit nulla ut viverra maecenas etiam donec vidi. Commodo etiam
-					pretium ultricies eget tincidunt nulla. Consectetuer ante eu rhoncus eget. Ligula vulputate pede.
-					Pellentesque porttitor eleifend tincidunt vitae vici blandit a pulvinar quis aenean venenatis
-					dapibus eget. Rhoncus in sit etiam montes nec hendrerit vidi tellus tincidunt nascetur lorem
-					natoque. Aenean enim rhoncus. Nisi hendrerit aenean luctus.</p>
+				<p>"The successful warrior is the average man, with laser-like focus."
+
+					-- Bruce Lee</p>
+			</div>
+			<div class="col-md-4 px-5">
+				<h3 class="text-center">Review 2</h3>
+				<p>"Character cannot be developed in ease and quiet. Only through experience of trial and suffering can the soul be strengthened, ambition inspired, and success achieved."
+
+					-- Helen Keller</p>
 			</div>
 		</div>
 	</section>
