--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,7 @@
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
 		  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link href="style.css" rel="stylesheet">
 
 	<title>Personal Website Project</title>
 </head>
@@ -18,46 +19,52 @@
 			<a class="navbar-brand" href="#">
 				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"
 					 class="d-inline-block align-text-top">
-				Super Saiyan Website Development<br>Personal Web Development Services</a>
+				Saiyan Web Development<br>Personal Website Development Services</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">About Me</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Service Plans</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Client Reviews</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Me</a>
-					</li>
-				</ul>
+			<div class="collapse navbar-collapse changeFlexGrow" id="navbarSupportedContent">
+				<div class="navbar-nav ml-auto mb-2 mb-lg-0">
+					<a class="nav-link active" aria-current="page" href="#">About Me</a>
+					<a class="nav-link" href="#">Service Plans</a>
+					<a class="nav-link" href="#">Client Reviews</a>
+					<a class="nav-link" href="#">Contact Me</a>
+				</div>
 			</div>
 		</div>
 	</nav>
 </header>
 
-
 <main>
 	<section class="container-fluid px-0">
 		<div class="row">
-			<div><img src="imgs/pwp-background-placeholder.png" class="img-fluid px-0" alt="Galaxy"></div>
+			<div class="col" id="gifContainer">
+				<img src="imgs/pwp-background-placeholder_4.gif" width="2559" class="img-fluid px-0 backgroundIMG"
+					 alt="Galaxy">
+			</div>
 		</div>
 	</section>
 
 	<section class="container-fluid py-4 bg-dark text-white">
 		<div class="row">
 			<div class="col-md-8 px-5">
-<!--				Add highlighted style to key words-->
-				<h1>About Super Saiyan Web Development</h1>
-				<p>Welcome to the most affordable and reliable service for all of your Web Development needs. We can build your own personal website from the ground up. Your new website will look and work how you want it to. This is done by having one-on-one meetings to ensure the design and functionality is what you want. You are here because you want to take your online presence to the next level and further achieve your goals. You can trust that we can make your new website a reality!</p>
+				<!--				TODO: Add highlighted style to key words-->
+				<h1>About Saiyan Web Development</h1>
+				<p>Welcome to the most affordable and reliable service for all of your Web Development needs. We can
+					build your own personal website from the ground up. Your new website will look and work how you want
+					it to. This is done by having one-on-one meetings to ensure the design and functionality is what you
+					want. You are here because you want to take your online presence to the next level and further
+					achieve your goals. You can trust that we can make your new website a reality!</p>
+			</div>
+			<div class="col-md-4 d-flex align-items-center">
+				<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
+					<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor"
+						 class="bi bi-github" viewBox="0 0 16 16">
+						<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+					</svg>
+				</a>
 			</div>
 		</div>
 	</section>
@@ -86,8 +93,8 @@
 					<li>A Website for you to sell your products</li>
 					<li>Online Shop</li>
 					<li>Created with Wordpress</li>
-					<li>Products, Add to Cart, Checkout </li>
-					<li>Optional Service: Continued wordpress Maintenance </li>
+					<li>Products, Add to Cart, Checkout</li>
+					<li>Optional Service: Continued wordpress Maintenance</li>
 				</ul>
 			</div>
 			<div class="col-md-4 px-5">
@@ -108,26 +115,28 @@
 			</div>
 		</div>
 	</section>
-
-	<section class="container-fluid bg-dark text-white">
+	<section class="container-fluid bg-dark">
 		<div class="row">
-			<div class="col-md-4 px-5">
-				<h3 class="text-center">Review 1</h3>
-				<p>"Success usually comes to those who are too busy to be looking for it."
-
-					-- Henry David Thoreau</p>
+			<div class="col-md-6">
+				<div class="card">
+					<div class="card-body">
+						<blockquote class="blockquote mb-0">
+							<p>"Success usually comes to those who are too busy to be looking for it."</p>
+							<footer class="blockquote-footer">Henry David Thoreau</footer>
+						</blockquote>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-4 px-5">
-				<h3 class="text-center">Review 2</h3>
-				<p>"The successful warrior is the average man, with laser-like focus."
-
-					-- Bruce Lee</p>
-			</div>
-			<div class="col-md-4 px-5">
-				<h3 class="text-center">Review 2</h3>
-				<p>"Character cannot be developed in ease and quiet. Only through experience of trial and suffering can the soul be strengthened, ambition inspired, and success achieved."
-
-					-- Helen Keller</p>
+			<div class="col-md-6">
+				<div class="card">
+					<div class="card-body">
+						<blockquote class="blockquote mb-0">
+							<p>"Character cannot be developed in ease and quiet. Only through experience of trial and
+								suffering can the soul be strengthened, ambition inspired, and success achieved."
+							<footer class="blockquote-footer">Helen Keller</footer>
+						</blockquote>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -147,6 +156,7 @@
 	</section>
 </footer>
 
+<script src="script.js"></script>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
