--- a/public_html/index.html
+++ b/public_html/index.html
@@ -76,34 +76,60 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="container">
 		<div class="row">
-			<div class="col-md-4 px-5">
-				<h3 class="text-center">Personal Web Portfolio</h3>
-				<ul>
-					<li>A Website for people to learn more about you</li>
-					<li>Single Page</li>
-					<li>Responsive to look professional on Mobile and Desktop</li>
-				</ul>
+			<div class="col-md-4">
+				<div class="card border border-dark border-3">
+					<img src="./imgs/super-saiyan-2.gif"
+						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"
+						 alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Personal Website</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">A Website for people to learn more about you</li>
+						<li class="list-group-item">Single Page</li>
+						<li class="list-group-item">Responsive to look professional on Mobile and Desktop</li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-md-4 px-5">
-				<h3 class="text-center">E-Commerce Online Web Shop </h3>
-				<ul>
-					<li>A Website for you to sell your products</li>
-					<li>Online Shop</li>
-					<li>Created with Wordpress</li>
-					<li>Products, Add to Cart, Checkout</li>
-					<li>Optional Service: Continued wordpress Maintenance</li>
-				</ul>
+			<div class="col-md-4">
+				<div class="card border border-dark border-3">
+					<img src="./imgs/super-saiyan-god.gif"
+						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"
+						 alt="...">
+					<div class="card-body">
+						<h5 class="card-title">E-Commerce Online Web Shop</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">A Website for you to sell your products</li>
+						<li class="list-group-item">Online Shop</li>
+						<li class="list-group-item">Created with Wordpress</li>
+						<li class="list-group-item">Products, Add to Cart, Checkout</li>
+						<li class="list-group-item">Optional Service: Continued wordpress Maintenance</li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-md-4 px-5">
-				<h3 class="text-center">Unique/Creative Website</h3>
-				<ul>
-					<li>Thinking outside the Box</li>
-					<li>Custom design created by you and me</li>
-					<li>Complex web development that is cutting edge</li>
-				</ul>
+			<div class="col-md-4">
+				<div class="card border border-dark border-3">
+					<img src="./imgs/ultra-instinct.gif"
+						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"
+						 alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Creative Unique Website</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">Thinking outside the Box</li>
+						<li class="list-group-item">Custom design created by you and me</li>
+						<li class="list-group-item">Complex web development that is cutting edge</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</section>
