--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,7 +40,7 @@
 <main>
 	<section class="container-fluid px-0">
 		<div class="row">
-			<div class="col" id="gifContainer">
+			<div class="col backgroundIMG" id="gifContainer">
 				<img src="imgs/pwp-background-placeholder_4.gif" width="2559" class="img-fluid px-0 backgroundIMG"
 					 alt="Galaxy">
 			</div>
