--- a/public_html/index.html
+++ b/public_html/index.html
@@ -38,11 +38,13 @@
 </header>
 
 <main>
+
+
+
 	<section class="container-fluid px-0">
 		<div class="row">
-			<div class="col backgroundIMG" id="gifContainer">
-				<img src="imgs/pwp-background-placeholder_4.gif" width="2559" class="img-fluid px-0 backgroundIMG"
-					 alt="Galaxy">
+			<div class="col">
+				<p class="backgroundIMG" id="gifContainer" onmouseenter="activateGIF()"></p>
 			</div>
 		</div>
 	</section>
