--- a/public_html/index.html
+++ b/public_html/index.html
@@ -44,7 +44,7 @@
 	<section class="container-fluid px-0">
 		<div class="row">
 			<div class="col">
-				<p class="backgroundIMG" id="gifContainer" onmouseenter="activateGIF()"></p>
+				<div class="backgroundIMG backgroundIMGSize" id="gifContainer" onmouseenter="activateGIF()"></div>
 			</div>
 		</div>
 	</section>
