--- a/public_html/index.html
+++ b/public_html/index.html
@@ -71,65 +71,61 @@
 		</div>
 	</section>
 
-	<section class="container d-flex justify-content-center">
+	<section class="container-fluid d-flex justify-content-center bg-dark text-white">
 		<div class="row">
 			<div class="col-md-3 px-5">
 				<h2 class="text-center">Services</h2>
 			</div>
 		</div>
 	</section>
-	<section class="container">
+	<section class="container-fluid bg-dark text-white">
 		<div class="row">
 			<div class="col-md-4">
-				<div class="card border border-dark border-3">
-					<img src="./imgs/super-saiyan-2.gif"
-						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"
-						 alt="...">
-					<div class="card-body">
-						<h5 class="card-title">Personal Website</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+				<div class="card border border-dark border-3 bg-dark text-white">
+<!--					<img src="./imgs/super-saiyan-2.gif"-->
+<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"-->
+<!--						 alt="...">-->
+					<div class="card-body bg-dark text-white">
+						<h5 class="card-title bg-dark text-white">Personal Website</h5>
+						<p class="card-text bg-dark text-white">You will get a one page website that will be personally customized for you.</p>
 					</div>
-					<ul class="list-group list-group-flush">
-						<li class="list-group-item">A Website for people to learn more about you</li>
-						<li class="list-group-item">Single Page</li>
-						<li class="list-group-item">Responsive to look professional on Mobile and Desktop</li>
+					<ul class="list-group list-group-flush bg-secondary text-white">
+						<li class="list-group-item bg-secondary text-white">A Website for people to learn more about you</li>
+						<li class="list-group-item bg-secondary text-white">Single Page</li>
+						<li class="list-group-item bg-secondary text-white">Responsive to look professional on Mobile and Desktop</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="card border border-dark border-3">
-					<img src="./imgs/super-saiyan-god.gif"
-						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"
-						 alt="...">
-					<div class="card-body">
-						<h5 class="card-title">E-Commerce Online Web Shop</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+				<div class="card border border-dark border-3 bg-dark text-white">
+<!--					<img src="./imgs/super-saiyan-god.gif"-->
+<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"-->
+<!--						 alt="...">-->
+					<div class="card-body bg-dark text-white">
+						<h5 class="card-title bg-dark text-white">E-Commerce Online Web Shop</h5>
+						<p class="card-text bg-dark text-white">You will get an online shop where customers can buy your products.</p>
 					</div>
-					<ul class="list-group list-group-flush">
-						<li class="list-group-item">A Website for you to sell your products</li>
-						<li class="list-group-item">Online Shop</li>
-						<li class="list-group-item">Created with Wordpress</li>
-						<li class="list-group-item">Products, Add to Cart, Checkout</li>
-						<li class="list-group-item">Optional Service: Continued wordpress Maintenance</li>
+					<ul class="list-group list-group-flush bg-secondary text-white">
+						<li class="list-group-item bg-secondary text-white">A Website for you to sell your products</li>
+						<li class="list-group-item bg-secondary text-white">Created with Wordpress</li>
+						<li class="list-group-item bg-secondary text-white">Products, Add to Cart, Checkout</li>
+						<li class="list-group-item bg-secondary text-white">Optional Service: Continued wordpress Maintenance</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="card border border-dark border-3">
-					<img src="./imgs/ultra-instinct.gif"
-						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"
-						 alt="...">
-					<div class="card-body">
-						<h5 class="card-title">Creative Unique Website</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+				<div class="card border border-dark border-3 bg-dark text-white">
+<!--					<img src="./imgs/ultra-instinct.gif"-->
+<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"-->
+<!--						 alt="...">-->
+					<div class="card-body bg-dark text-white">
+						<h5 class="card-title bg-dark text-white">Creative Unique Website</h5>
+						<p class="card-text bg-dark text-white">You will get a Website that has many unique features that are cutting edge. </p>
 					</div>
-					<ul class="list-group list-group-flush">
-						<li class="list-group-item">Thinking outside the Box</li>
-						<li class="list-group-item">Custom design created by you and me</li>
-						<li class="list-group-item">Complex web development that is cutting edge</li>
+					<ul class="list-group list-group-flush bg-secondary text-white">
+						<li class="list-group-item bg-secondary text-white">Thinking outside the Box</li>
+						<li class="list-group-item bg-secondary text-white">Custom design created by you and me</li>
+						<li class="list-group-item bg-secondary text-white">Complex web development that is cutting edge</li>
 					</ul>
 				</div>
 			</div>
@@ -143,14 +139,14 @@
 			</div>
 		</div>
 	</section>
-	<section class="container-fluid bg-dark">
+	<section class="container-fluid">
 		<div class="row">
 			<div class="col-md-6">
 				<div class="card">
 					<div class="card-body">
-						<blockquote class="blockquote mb-0">
-							<p>"Success usually comes to those who are too busy to be looking for it."</p>
-							<footer class="blockquote-footer">Henry David Thoreau</footer>
+						<blockquote class="blockquote mb-0 bg-dark text-white">
+							<p>"Im Goku, a Saiyan who was raised on Earth...or so they tell me."</p>
+							<footer class="blockquote-footer text-secondary">Goku</footer>
 						</blockquote>
 					</div>
 				</div>
@@ -158,10 +154,9 @@
 			<div class="col-md-6">
 				<div class="card">
 					<div class="card-body">
-						<blockquote class="blockquote mb-0">
-							<p>"Character cannot be developed in ease and quiet. Only through experience of trial and
-								suffering can the soul be strengthened, ambition inspired, and success achieved."
-							<footer class="blockquote-footer">Helen Keller</footer>
+						<blockquote class="blockquote mb-0 bg-dark text-white">
+							<p>"And, last but not least... KAAAAAMEEEEEHAAAAMEEEEEEHAAAAAAA!!!!!"</p>
+							<footer class="blockquote-footer text-secondary">Goku</footer>
 						</blockquote>
 					</div>
 				</div>
