--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,12 +14,13 @@
 </head>
 <body>
 <header>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark" id="topOfPage">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">
-				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"
-					 class="d-inline-block align-text-top">
-				Saiyan Web Development<br>Personal Website Development Services</a>
+			<a class="navbar-brand fs-1 fw-bold" href="#topOfPage">
+<!--				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"-->
+<!--					 class="d-inline-block align-text-top">-->
+				Saiyan Web Development<br>
+				<span class="fst-italic fs-3 ms-5">Personal Website Development Services</span></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +28,10 @@
 			</button>
 			<div class="collapse navbar-collapse changeFlexGrow" id="navbarSupportedContent">
 				<div class="navbar-nav ml-auto mb-2 mb-lg-0">
-					<a class="nav-link active" aria-current="page" href="#">About Me</a>
-					<a class="nav-link" href="#">Service Plans</a>
-					<a class="nav-link" href="#">Client Reviews</a>
-					<a class="nav-link" href="#">Contact Me</a>
+					<a class="nav-link active" aria-current="page" href="#aboutMe">About Me</a>
+					<a class="nav-link" href="#services">Service Plans</a>
+					<a class="nav-link" href="#reviews">Client Reviews</a>
+					<a class="nav-link" href="#contactMe">Contact Me</a>
 				</div>
 			</div>
 		</div>
@@ -38,9 +39,6 @@
 </header>
 
 <main>
-
-
-
 	<section class="container-fluid px-0">
 		<div class="row">
 			<div class="col">
@@ -49,16 +47,16 @@
 		</div>
 	</section>
 
-	<section class="container-fluid py-4 bg-dark text-white">
-		<div class="row">
-			<div class="col-md-8 px-5">
+	<section class="container-fluid pb-4 pt-3 bg-dark text-white px-5" id="aboutMe">
+		<div class="row pb-5">
+			<div class="col-md-8">
 				<!--				TODO: Add highlighted style to key words-->
-				<h1>About Saiyan Web Development</h1>
-				<p>Welcome to the most affordable and reliable service for all of your Web Development needs. We can
-					build your own personal website from the ground up. Your new website will look and work how you want
-					it to. This is done by having one-on-one meetings to ensure the design and functionality is what you
+				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
+				<p class="fs-3">Welcome to the most <span class="highlight-text">affordable</span> and <span class="highlight-text">reliable</span> service for all of your Web Development needs. We can
+					build your own <span class="highlight-text">personal</span> website from the ground up. Your new website will look and work how you want
+					it to. This is done by having <span class="highlight-text">one-on-one</span> meetings to ensure the <span class="highlight-text">design</span> and <span class="highlight-text">functionality</span> is what you
 					want. You are here because you want to take your online presence to the next level and further
-					achieve your goals. You can trust that we can make your new website a reality!</p>
+					achieve your <span class="highlight-text">goals</span>. You can <span class="highlight-text">trust</span> that we can make your new website a reality!</p>
 			</div>
 			<div class="col-md-4 d-flex align-items-center">
 				<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
@@ -71,23 +69,23 @@
 		</div>
 	</section>
 
-	<section class="container-fluid d-flex justify-content-center bg-dark text-white">
+	<section class="container-fluid d-flex justify-content-center bg-dark text-white pb-3" id="services">
 		<div class="row">
-			<div class="col-md-3 px-5">
-				<h2 class="text-center">Services</h2>
+			<div class="col-md-4">
+				<h2 class="text-center fs-1 text-nowrap fw-bold">Select A Service</h2>
 			</div>
 		</div>
 	</section>
-	<section class="container-fluid bg-dark text-white">
+	<section class="container-fluid bg-dark text-white fs-4 pb-5 px-5">
 		<div class="row">
 			<div class="col-md-4">
-				<div class="card border border-dark border-3 bg-dark text-white">
+				<div class="card border border-light border-3 bg-dark text-white">
 <!--					<img src="./imgs/super-saiyan-2.gif"-->
 <!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"-->
 <!--						 alt="...">-->
-					<div class="card-body bg-dark text-white">
-						<h5 class="card-title bg-dark text-white">Personal Website</h5>
-						<p class="card-text bg-dark text-white">You will get a one page website that will be personally customized for you.</p>
+					<div class="card-body bg-info text-white">
+						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Personal Website</h5>
+						<p class="card-text bg-info text-white">You will get a one page website that will be personally customized for you.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">A Website for people to learn more about you</li>
@@ -97,13 +95,13 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="card border border-dark border-3 bg-dark text-white">
+				<div class="card border border-light border-3 bg-dark text-white">
 <!--					<img src="./imgs/super-saiyan-god.gif"-->
 <!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"-->
 <!--						 alt="...">-->
-					<div class="card-body bg-dark text-white">
-						<h5 class="card-title bg-dark text-white">E-Commerce Online Web Shop</h5>
-						<p class="card-text bg-dark text-white">You will get an online shop where customers can buy your products.</p>
+					<div class="card-body bg-info text-white">
+						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Online Web Shop</h5>
+						<p class="card-text bg-info text-white">You will get an online shop where customers can buy your products.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">A Website for you to sell your products</li>
@@ -114,13 +112,13 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="card border border-dark border-3 bg-dark text-white">
+				<div class="card border border-light border-3 bg-dark text-white">
 <!--					<img src="./imgs/ultra-instinct.gif"-->
 <!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"-->
 <!--						 alt="...">-->
-					<div class="card-body bg-dark text-white">
-						<h5 class="card-title bg-dark text-white">Creative Unique Website</h5>
-						<p class="card-text bg-dark text-white">You will get a Website that has many unique features that are cutting edge. </p>
+					<div class="card-body bg-info text-white">
+						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Unique Website</h5>
+						<p class="card-text bg-info text-white">You will get a Website that has many unique features that are cutting edge. </p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">Thinking outside the Box</li>
@@ -132,15 +130,15 @@
 		</div>
 	</section>
 
-	<section class="container-fluid d-flex justify-content-center bg-dark text-white">
+	<section class="container-fluid d-flex justify-content-center bg-dark text-white px-5" id="reviews">
 		<div class="row">
-			<div class="col-md-3 px-5">
-				<h2 class="text-center">Reviews</h2>
+			<div class="col-md-3 pb-3">
+				<h2 class="text-center fs-1 fw-bold">Reviews</h2>
 			</div>
 		</div>
 	</section>
-	<section class="container-fluid">
-		<div class="row">
+	<section class="container-fluid bg-dark">
+		<div class="row px-5">
 			<div class="col-md-6">
 				<div class="card">
 					<div class="card-body">
@@ -166,8 +164,8 @@
 </main>
 
 
-<footer>
-	<section class="container">
+
+	<section class="container-fluid bg-dark pt-5 text-white" id="contactMe">
 		<div class="mb-3">
 			<label for="exampleFormControlInput1" class="form-label">Email address</label>
 			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -177,6 +175,10 @@
 			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 		</div>
 	</section>
+<footer class="container-fluid bg-dark text-white">
+	<div class="row">
+		<div class="col fs-3 text-center">Thanks for Visiting the site!</div>
+	</div>
 </footer>
 
 <script src="script.js"></script>
