fixed responcive behaviors

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,8 +19,9 @@
 			<a class="navbar-brand fs-1 fw-bold" href="#topOfPage">
 <!--				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"-->
 <!--					 class="d-inline-block align-text-top">-->
-				Saiyan Web Development<br>
-				<span class="fst-italic fs-3 ms-5">Personal Website Development Services</span></a>
+				Saiyan Web Development</a>
+<!--				<br>-->
+<!--				<span class="fst-italic fs-3 ms-5">Personal Website Development Services</span></a>-->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +43,8 @@
 	<section class="container-fluid px-0">
 		<div class="row">
 			<div class="col">
-				<div class="backgroundIMG backgroundIMGSize" id="gifContainer" onmouseenter="activateGIF()"></div>
+<!--				<div class="backgroundIMG backgroundIMGSize" id="gifContainer" onmouseenter="activateGIF()"></div>-->
+			<img class="img-fluid backgroundIMGSize" src="imgs/front-page-gif-2.gif" alt="galaxy">
 			</div>
 		</div>
 	</section>
