--- a/public_html/index.html
+++ b/public_html/index.html
@@ -167,7 +167,7 @@
 
 
 <!--start of the form-->
-<h2 id="contactMe">testing 123</h2>
+<h2 id="contactMe">Contact Form</h2>
 <form action="./apis/" id="contact" method="post" novalidate>
 	<div class="form-group">
 		<label for="name">Name</label>
@@ -213,6 +213,31 @@
 	<button class="btn btn-default" type="reset">Reset</button>
 </form>
 <!--end of the form-->
+
+<script
+		src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+		crossorigin="anonymous"></script>
+<script crossorigin="anonymous"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script crossorigin="anonymous"
+		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+<!-- jQuery Form, Validate, Additional Methods, -->
+<script crossorigin="anonymous"
+		integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA="
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
+<script crossorigin="anonymous"
+		integrity="sha256-F6h55Qw6sweK+t7SiOJX+2bpSAa3b/fnlrVCJvmEj1A="
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+<script crossorigin="anonymous"
+		integrity="sha256-0Yg/eibVdKyxkuVo1Qwh0DspoUCHvSbm/oOoYVz32BQ="
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
+
+<!--jquery script-->
+<script src="form-script.js"></script>
 
 <script src="script.js"></script>
 <!-- Option 1: Bootstrap Bundle with Popper -->
