set up express dependencies, started express front-end validation

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -168,7 +168,7 @@
 
 <!--start of the form-->
 <h2 id="contactMe">Contact Form</h2>
-<form action="./apis/" id="contact" method="post" novalidate>
+<form action="http://localhost:4200/apis/" id="contact" method="post" novalidate>
 	<div class="form-group">
 		<label for="name">Name</label>
 		<div class="input-group">
