added google reCaptcha

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -208,7 +208,7 @@
 		</div>
 	</div>
 	<!-- Make sure to add site key provided by google recaptcha -->
-	<!--  <div class="g-recaptcha" data-sitekey=""></div> -->
+	  <div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
 	<button class="btn btn-info" type="submit">Submit</button>
 	<button class="btn btn-default" type="reset">Reset</button>
 </form>
@@ -235,6 +235,9 @@
 <script crossorigin="anonymous"
 		integrity="sha256-0Yg/eibVdKyxkuVo1Qwh0DspoUCHvSbm/oOoYVz32BQ="
 		src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
+
+<!--Google reCAPTCHA-->
+<script src='https://www.google.com/recaptcha/api.js'></script>
 
 <!--jquery script-->
 <script src="form-script.js"></script>
