--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,11 +17,11 @@
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark" id="topOfPage">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-1 fw-bold" href="#topOfPage">
-<!--				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"-->
-<!--					 class="d-inline-block align-text-top">-->
+				<!--				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"-->
+				<!--					 class="d-inline-block align-text-top">-->
 				Saiyan Web Development</a>
-<!--				<br>-->
-<!--				<span class="fst-italic fs-3 ms-5">Personal Website Development Services</span></a>-->
+			<!--				<br>-->
+			<!--				<span class="fst-italic fs-3 ms-5">Personal Website Development Services</span></a>-->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -43,8 +43,8 @@
 	<section class="container-fluid px-0">
 		<div class="row">
 			<div class="col">
-<!--				<div class="backgroundIMG backgroundIMGSize" id="gifContainer" onmouseenter="activateGIF()"></div>-->
-			<img class="img-fluid backgroundIMGSize" src="imgs/front-page-gif-2.gif" alt="galaxy">
+				<!--				<div class="backgroundIMG backgroundIMGSize" id="gifContainer" onmouseenter="activateGIF()"></div>-->
+				<img class="img-fluid backgroundIMGSize" src="imgs/front-page-gif-2.gif" alt="galaxy">
 			</div>
 		</div>
 	</section>
@@ -54,11 +54,16 @@
 			<div class="col-md-8">
 				<!--				TODO: Add highlighted style to key words-->
 				<h1 class="fs-1 fw-bold">About Saiyan Web Development</h1>
-				<p class="fs-3">Welcome to the most <span class="highlight-text">affordable</span> and <span class="highlight-text">reliable</span> service for all of your Web Development needs. We can
-					build your own <span class="highlight-text">personal</span> website from the ground up. Your new website will look and work how you want
-					it to. This is done by having <span class="highlight-text">one-on-one</span> meetings to ensure the <span class="highlight-text">design</span> and <span class="highlight-text">functionality</span> is what you
+				<p class="fs-3">Welcome to the most <span class="highlight-text">affordable</span> and <span
+						class="highlight-text">reliable</span> service for all of your Web Development needs. We can
+					build your own <span class="highlight-text">personal</span> website from the ground up. Your new
+					website will look and work how you want
+					it to. This is done by having <span class="highlight-text">one-on-one</span> meetings to ensure the
+					<span class="highlight-text">design</span> and <span class="highlight-text">functionality</span> is
+					what you
 					want. You are here because you want to take your online presence to the next level and further
-					achieve your <span class="highlight-text">goals</span>. You can <span class="highlight-text">trust</span> that we can make your new website a reality!</p>
+					achieve your <span class="highlight-text">goals</span>. You can <span
+							class="highlight-text">trust</span> that we can make your new website a reality!</p>
 			</div>
 			<div class="col-md-4 d-flex align-items-center">
 				<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
@@ -82,50 +87,61 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card border border-light border-3 bg-dark text-white">
-<!--					<img src="./imgs/super-saiyan-2.gif"-->
-<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"-->
-<!--						 alt="...">-->
+					<!--					<img src="./imgs/super-saiyan-2.gif"-->
+					<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-warning border border-2"-->
+					<!--						 alt="...">-->
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Personal Website</h5>
-						<p class="card-text bg-info text-white">You will get a one page website that will be personally customized for you.</p>
+						<p class="card-text bg-info text-white">You will get a one page website that will be personally
+							customized for you.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">A Website for people to learn more about you</li>
+						<li class="list-group-item bg-secondary text-white">A Website for people to learn more about
+							you
+						</li>
 						<li class="list-group-item bg-secondary text-white">Single Page</li>
-						<li class="list-group-item bg-secondary text-white">Responsive to look professional on Mobile and Desktop</li>
+						<li class="list-group-item bg-secondary text-white">Responsive to look professional on Mobile
+							and Desktop
+						</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="card border border-light border-3 bg-dark text-white">
-<!--					<img src="./imgs/super-saiyan-god.gif"-->
-<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"-->
-<!--						 alt="...">-->
+					<!--					<img src="./imgs/super-saiyan-god.gif"-->
+					<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-primary border border-2"-->
+					<!--						 alt="...">-->
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">E-Commerce Online Web Shop</h5>
-						<p class="card-text bg-info text-white">You will get an online shop where customers can buy your products.</p>
+						<p class="card-text bg-info text-white">You will get an online shop where customers can buy your
+							products.</p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">A Website for you to sell your products</li>
 						<li class="list-group-item bg-secondary text-white">Created with Wordpress</li>
 						<li class="list-group-item bg-secondary text-white">Products, Add to Cart, Checkout</li>
-						<li class="list-group-item bg-secondary text-white">Optional Service: Continued wordpress Maintenance</li>
+						<li class="list-group-item bg-secondary text-white">Optional Service: Continued wordpress
+							Maintenance
+						</li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="card border border-light border-3 bg-dark text-white">
-<!--					<img src="./imgs/ultra-instinct.gif"-->
-<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"-->
-<!--						 alt="...">-->
+					<!--					<img src="./imgs/ultra-instinct.gif"-->
+					<!--						 class="card-img-top img-fluid rounded-circle cardImgSize border border-info border border-2"-->
+					<!--						 alt="...">-->
 					<div class="card-body bg-info text-white">
 						<h5 class="card-title bg-info text-white fs-3 text-uppercase">Creative Unique Website</h5>
-						<p class="card-text bg-info text-white">You will get a Website that has many unique features that are cutting edge. </p>
+						<p class="card-text bg-info text-white">You will get a Website that has many unique features
+							that are cutting edge. </p>
 					</div>
 					<ul class="list-group list-group-flush bg-secondary text-white">
 						<li class="list-group-item bg-secondary text-white">Thinking outside the Box</li>
 						<li class="list-group-item bg-secondary text-white">Custom design created by you and me</li>
-						<li class="list-group-item bg-secondary text-white">Complex web development that is cutting edge</li>
+						<li class="list-group-item bg-secondary text-white">Complex web development that is cutting
+							edge
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -208,7 +224,7 @@
 		</div>
 	</div>
 	<!-- Make sure to add site key provided by google recaptcha -->
-	  <div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
+	<div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
 	<button class="btn btn-info" type="submit">Submit</button>
 	<button class="btn btn-default" type="reset">Reset</button>
 </form>
