made minor changes to nav

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,8 +20,8 @@
 				<!--				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"-->
 				<!--					 class="d-inline-block align-text-top">-->
 				Saiyan Web Development</a>
-			<!--				<br>-->
-			<!--				<span class="fst-italic fs-3 ms-5">Personal Website Development Services</span></a>-->
+<!--							<br>-->
+<!--							<div class="fst-italic fs-3 ms-5">Personal Website Development Services</div></a>-->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
